# lecture-qa-extraction

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_DIARY.md  README.it.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
analysis/: __init__.py  audio_quality.py  qa_extractor.py  qa_rules.py  segmenter.py  semantic_reranking.py  semantic_retrieval.py  sentence_provenance.py  sentence_reconstruction.py  speaker_attribution.py  speaker_role.py  speaker_stability.py  utterance_builder.py
artifacts/: l25p02_adaptive.json  l25p02_structural.json  l25p02_windowed.json  l25p03_structural.json  l25p03_windowed.json  l25p04_adaptive.json  l25p04_structural.json  l25p04_windowed.json  l25p08_adaptive.json  session.json  sessionL25P04.json  ssl1p1_adaptive.json  ssl1p1_structural.json  ssl1p1_windowed.json
core/: __init__.py  config.py  errors.py  models.py  pipeline.py  timing.py  types.py
docs/: architecture.md  decision_plan_2026-07-03.md  demo_docker.md  local_installation.md  prototype_closure_report.md  quality_evaluation.md  repository_status.md  schema_notes.md  session_schema_draft.json  simplification_plan.md
input/: __init__.py  session_loader.py
lecture_ui/: README.md  run.sh  serve.py
output/: __init__.py  debug_excel_exporter.py  json_exporter.py  sentence_provenance_validation.py
preprocessing/: audio_extractor.py  audio_normalizer.py  normalized_audio_metadata_store.py
sample_data/: README.md
scripts/: README.md  run_demo_docker.sh  run_evaluation_batch.py  run_full_pipeline_docker.sh
tests/: conftest.py  (+28 more)
(+97 files in other folders)
